# docker-page-tracker

./: docker-compose.yaml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
page-tracker/: Dockerfile  Readme.md  constraints.txt  pyproject.toml
page-tracker/src/page_tracker/: app.py
page-tracker/src/page_tracker.egg-info/: PKG-INFO  requires.txt
page-tracker/test/: conftest.py
page-tracker/test/unit/: test_app.py
