# pyproject.toml

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "page-tracker"
version = "1.0.0"
dependencies = [
    "Flask",
    "redis",
]

[project.optional-dependencies]
dev = [
    "bandit",           # static analysis
    "black",            # code formatter
    "flake8",           # code style
    "isort",            # import sorting
    "pylint",           # code style
    "pytest",           # testing
    "pytest-timeout",   # testing
]